# shift-agent

./: .codex_recon_prompt.md  .codex_scene.md  .codex_scene2.md  .deploy_gate6.txt  .deploy_gate6b.txt  .deploy_gate6b2.txt  .deploy_gate6c.txt  .deploy_gate6c2.txt  .deploy_gate6c3.txt  .deploy_gate6c4.txt  .deploy_gate6c5.txt  .deploy_gate6c6.txt  .deploy_mask.txt  .gitattributes  .gitignore  .local_skills.txt  .p1_deploy.txt  .smoke_test.txt  .tests_run.txt  AGENTS.md  CLAUDE.md  DESIGN.md  GO-LIVE-HANDOFF.md  PLAN.md  README.md  backlog.md  branch_failures.txt  branch_failures2.txt  requirements-hermes-venv.txt
.github/: pull_request_template.md
docs/: catering-edge-cases.md  deploy.md  fleet-provisioning.md  flyer-studio-current-state.md  hermes-0.17-upgrade-plan.md  hermes-alignment.md  multi-tenant-architecture.md  operator-runbook.md  portfolio.md
review-notes/: DESIGN-SYNTHESIS.md  PR-SYNTHESIS-post-f1806f0.md  PR-SYNTHESIS.md  SYNTHESIS.md  design-review-01-architect.md  design-review-02-silent-failures.md  design-review-03-ops-systemd.md  design-review-04-python-specifics.md  design-review-05-types-contracts.md  meta-review-2026-04-24.md  plan-review-01-architect.md  plan-review-02-sre.md  plan-review-03-devils-advocate.md  plan-review-04-alt-architectures.md  plan-review-05-security.md  pr-review-01-code-quality.md  pr-review-02-silent-failures.md  pr-review-03-comment-accuracy.md  pr-review-04-test-coverage.md  pr-review-05-security.md
src/: runbook.md  safe_io.py  schemas.py  (+1 more)
web/backend/: pyproject.toml
web/backend/app/: __init__.py  audit.py  auth.py  config.py  deps.py  log_tail.py  main.py  models.py  shell.py  state.py  totp.py
web/backend/app/routers/: audit.py  auth.py  commerce.py  config.py  decisions.py  disclosures.py  flyer.py  health.py  pending.py  roster.py  safety.py  schedule.py  whatsapp.py
web/backend/scripts/: dump-openapi.py
web/backend/tests/: conftest.py  test_auth.py  test_commerce_cockpit_e2e.py  test_commerce_orders.py  test_commerce_transition.py  test_csv_formula_guard.py  test_flyer_admin.py  test_flyer_admin_claim_next.py  test_flyer_admin_close_no_send.py  test_flyer_admin_cockpit_ops.py  test_flyer_admin_ownership.py  test_flyer_admin_resend_status.py  test_flyer_health.py  test_jwt_validator.py  test_log_tail.py  test_proposal_status_coverage.py  test_proposal_status_literal.py  test_shell.py  test_totp.py
(+1238 files in other folders)
