[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shift-agent-cockpit"
version = "0.1.0"
description = "Owner cockpit for Shift Agent — single-user web admin"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.20",
  "sse-starlette>=2.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
