[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shift-agent-cockpit"
version = "0.1.0"
description = "Owner cockpit for Shift Agent — single-user web admin"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  # PR-D1 R1-HIGH-2 + R5-HIGH-1: callable Discriminator + Tag union pattern
  # is stable from Pydantic 2.10 (validated on 2.12.5). Older versions silently
  # ignore the Tag-on-Annotated-union-member form and fall back to single-arm
  # validation, which would silently break the LogEntry forward-compat shim.
  "pydantic>=2.10",
  "pyyaml>=6.0",
  # Floor raised to 3.4.0: 3.3.0 predates the fix for CVE-2024-33663
  # (algorithm-confusion) and CVE-2024-33664 (JWE decompression DoS) on the
  # JWT mint/decode path in app/auth.py. Still no upper bound / hash-lock —
  # follow-up: generate a committed hash-pinned lockfile (pip-compile
  # --generate-hashes) and install with --require-hashes. Operator should also
  # verify the live venv via `pip show python-jose` (may already be >=3.4).
  "python-jose[cryptography]>=3.4.0",
  "python-multipart>=0.0.20",
  "sse-starlette>=2.1",
  "httpx>=0.27",
  "pyotp>=2.9",
  "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "anyio>=4.4",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
